--- a/keyboard-control/package.json
+++ b/keyboard-control/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -w",
+    "dev": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^22.10.2",
+    "ansi-escapes": "^7.0.0",
     "typescript": "^5.7.2"
   }
 }
