--- a/keyboard-control/package.json
+++ b/keyboard-control/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/node": "^22.10.2",
     "ansi-escapes": "^7.0.0",
+    "chalk": "^5.4.0",
     "typescript": "^5.7.2"
   }
 }
