--- a/prompts/package.json
+++ b/prompts/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc -w",
-    "dev": "node ./dist/test.js"
+    "dev": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
