--- a/cli-dashboard/tsconfig.json
+++ b/cli-dashboard/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outdir":"dist",
+    "outDir":"dist",
     "types":["node"],
     "target": "es2016",
     "module": "NodeNext",
