--- a/cli-dashboard/package.json
+++ b/cli-dashboard/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -w",
+    "dev": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
