--- a/cli-dashboard/package.json
+++ b/cli-dashboard/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^22.10.3",
     "blessed": "^0.1.81",
     "blessed-contrib": "^4.11.0",
+    "systeminformation": "^5.24.5",
     "typescript": "^5.7.2"
   }
 }
